# decent-cloud

./: .dockerignore  .env-proxmox  .gitattributes  .gitignore  .pr-review-test.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MANUAL_TEST_VERIFICATION.md  MARKETPLACE_RENTAL_FLOW_PLAN.md  MIGRATION.md  Makefile.toml  PROMPT.md  README.md  TODO.md  claude-docker.sh  cliff.toml  dc-agent.toml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  rust-toolchain.toml  uv.toml  wrangler.toml
api/: .env.example  .sqlx-prepare.db  AGENTS.md  Cargo.toml  Dockerfile  TODO.md  UNIQUENESS_CONSTRAINTS.md  api.db  e2e-test.db  ledger.db  test.db
api/.sqlx/: query-04abdfbeec18c851fb06b4cf60d31791962102286d9e553b62da4f5370fcf42c.json  query-04dd399719acabf331fa7daf5e9f38bb377743bb93dc24afaaea7116024a2a53.json  query-05857a762a2e064a97ae6d3dfbb2d76cc2a85850d3220953e02a4867da7e0254.json  query-0641c120a6db17abaf986b3d411f52bc037d53948277c45f7eb6f1b61b743f8e.json  query-06dd05566e62de248fa87c1e006898fc32977f508adc3d150f80ce9b30061f75.json  query-07337245287aa79c88972a7a97294f2d577f83a3267847be3873f84c3a61e15c.json  query-07534c14e91daafb80ade24dc64f994aaa608538b6a3d482a6b7c32b065b46fe.json  query-085d047b25de727c2ecfebf3131685a8b9d1c3e52fd899c0be2f70afb4defc70.json  query-087f987d49401877c5d24b1fb3fd09b9cca914c81f289ac94339da336a113ff2.json  query-08f5d0650fb0b512b45d681d0ed64a6580fbccc692c048f519326f7560bad3c7.json  query-09c3488c89a169370423db2a08962631ca54faa975778947f50f93f0e087643e.json  query-0d6e2a5465456ab5b1c936183d4f21213a3b81b23072016869a46b3233cb3ee9.json  query-0ee2f75b4f4d6885a33ed94a2ddac9f051790b8bad63939af5ed30644a598948.json  query-0f1a5f95adac18b59aa0b554f79f82fae04d3e1984e1902ae88d42a1f6c1dd52.json  query-0ff48b667e99e6de858862f96a2fcf3ba2749c4d1c2fa3e19811afb691b321ac.json  query-1027abf9feeab08328f4929d6cbd8576a8314268d91d7c4b773360beef5a3bd0.json  query-124a79f25be17d79cabf08917aec240858f9cbbf1300158efb7026c61ba4d934.json  query-14017402c5cd609f1b11b2d3329f9f8c479da96e01f8d2527ab059781693d2c0.json  query-15a6cc98f1a8a86b4f2217e03849e40d2dfec829482cc6a6d5d9505c9bc78176.json  query-16a84a6e9912967ec5c6a5168616326c40f37f1d55000a6ab6f6aefb96796b24.json  query-17339c9604c7e65dfb72fdcb7708f23c9f66009a7a28b429976f7ccf6a34f357.json  query-17b95ac086a45b68e2c9e0eed46bb34a11898199245aa212963377926dde4c41.json  query-19f98d198db41ed395b819e206cd751d66355fd9637aa15320106f7df9446fd0.json  query-1a566556815cfabbaf511625bfc7af7566df249c94cd733a9ec90b614f7b866b.json  query-1aa0eef9b68391efb78f08bac4944deb7778664b79e35d27a1cbbb637ce171cb.json  query-1c4b618612d867a1c7e5218f9a418521c233a1c0f957d73fcfe3b44d3874a43e.json  query-1d5876f3049e3ec2d689a42cea7b0672d69d55913d4c229232fde31fbfe54629.json  query-1ed5000bff5782168cb62d8808e8feb4916f3f04f6a84473f07daf9b04ba65aa.json  query-200e1dc5b7573f04788c79752a89a65fad71d4255546a9216b822daeac4018bf.json  query-213c6f5bc9c75ed69fe3116134800fe6f98632eaa77346d570a19191594ef51d.json  query-21bf20040c3be5349dc9463ca6a751f883a50adbe2e8754c3cf9017f09dabf9e.json  query-23868bff2105d92ea8f1c130e5ffeb3a06095f13d37b0e2c3f2591bf6fcb8d2e.json  query-243378185925e54f2ed44abed723530c5fd6b096e34b7d3701fdc6a6c34cfc1b.json  query-24cf92167cf3db1333bdcf55a227626207f7971e5a8d946b6483113139f3ad4f.json  query-2503a62f477fa2476472b0c41a91765895224800c460ad440d24eef0abc9c4d4.json  query-2520ef111cd240d55efcc041c99860f35b080af217417534473c002d43842782.json  query-2630ce2c4d96535d175a2c8ca743ad51aabc5b838083ed6df8b4434789bff9ca.json  query-27227ea2bc775e5cfad54a88f83e06f82faf9203097c6c4d00551799f0951b89.json  query-2a46b88e8fd0480dc19ab478d5c925af2603ee200aaac7af76f4bb5d78180ea6.json  query-2a501a302302f8889891cdb15811104f6591f846218bf1049604a1bf8999aaf6.json  (+189 more)
api/bindings/: BackendCatalog.ts  BackendType.ts  CreateServerRequest.ts  Image.ts  Location.ts  Server.ts  ServerMetrics.ts  ServerStatus.ts  ServerType.ts
api/data/: ledger.db
api/docs/: KEY_RECOVERY_SOLUTIONS.md  UI_IMPLEMENTATION_SPEC.md  USER_PROFILES_SUMMARY.md  stripe-tax-integration.md
api/email-utils/: Cargo.toml
api/migrations/: 001_flattened_schema.sql  001_initial_schema.sql  001_original_schema.sql  002_account_profiles.sql  002_add_example_offerings.sql  002_clean_structured_schema.sql  002_fix_contract_foreign_key.sql  002_structured_tables.sql  002_user_profiles.sql  003_complete_structured_schema.sql  003_device_names.sql  003_properly_structured_schema.sql  003_simplify_offering_metadata.sql  004_account_profiles_fix.sql  004_fully_structured_schema.sql  005_fix_sync_duplicates.sql  005_oauth_support.sql  006_gpu_fields.sql  007_username_case_sensitive.sql  008_example_offerings.sql  009_email_queue.sql  010_payment_methods.sql  011_payment_status.sql  012_refund_tracking.sql  013_contract_currency.sql  014_fix_contract_currency_data.sql  015_update_example_offering_currencies.sql  016_contract_currency.sql  017_drop_currency_default.sql  018_provider_trust_cache.sql  019_last_login_tracking.sql  020_email_verification.sql  021_admin_accounts.sql  022_messaging.sql  023_email_queue_time_based_retry.sql  024_chatwoot_tracking.sql  025_icpay_rename.sql  026_sla_tracking.sql  027_chatwoot_user_id.sql  028_provider_notification_config.sql  (+37 more)
api/migrations_pg/: 001_schema.sql  (+45 more)
cli/: BUCK  Cargo.toml  np-profile.yaml
common/: BUCK  Cargo.toml
dc-agent/: AGENTS.md  Cargo.toml  dc-agent.toml.example
ic-canister/: AGENTS.md  API_GUIDE.md  Cargo.toml  LEDGER_ENTRIES_API.md  README.md  build.rs  canister_ids.json  decent_cloud.did  dfx.json
ledger-map/: Cargo.toml  README.md  package.json
np-offering/: Cargo.toml  README.md
wasm/: .eslintrc.json  .gitignore  .npmignore  Cargo.toml  DB_ALTERNATIVES.md  README.md  agent.js  agent.ts  agent_js_wrapper.js  build.js  canister_fetch.ts  canister_idl.js  client.js  db.js  db.ts  dc-client-worker.js  dc-client.d.ts  dc-client.js  dc-client.mjs  eslint.config.mjs  index.d.ts  labels.ts  ledger.js  ledger.ts  package-lock.json  package.json  tsconfig.json
web/: Cargo.toml  README.md  package.json  tsconfig.json
(+1776 files in other folders)
