[workspace]
resolver = "2"
members = [
    "cli",
    "common",
    "ic-canister",
    "np-offering",
    "np-profile",
    "np-json-search",
    "wasm",
]

[workspace.package]
version = "0.2.1"
edition = "2021"

[workspace.dependencies]
ahash = { version = "0.8", default-features = false }
anyhow = "1.0"
base32 = "0.5"
base64 = "0.22"
borsh = { version = "1.5.5", features = ["derive"] }
ciborium = "0.2"
candid = "0.10"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
data-encoding = "2.8"
derp = "0.0.15"
dcc-common = { path = "common" }
dialoguer = "0.11"
dirs = "6.0"
ed25519-dalek = { version = "2", default-features = false, features = [
    "alloc",
    "digest",
    "pkcs8",
    "pem",
] }
env_logger = "0.11"
flate2 = "1.0"
filetime = "0.2"
fs-err = "3.1.0"
function_name = "0.3"
hex = "0.4"
hmac = "0.12"
ic-agent = "0.39.3"
ic-canister-log = "0.2"
ic-cdk = "0.17"
ic-certification = "3.0.3"
ic-metrics-encoder = "1.1"
ic-cdk-timers = "0.11"
icrc-ledger-types = "0.1"
indexmap = "2.7"
ledger-map = { path = "../ledger-map" }
# ledger-map = { git = "https://github.com/decent-stuff/ledger-map.git", branch = "main" }
log = "0.4"
memmap2 = "0.9"
num-traits = "0.2"
num-bigint = { version = "0.4", default-features = false, features = ["serde"] }
np-offering = { path = "np-offering" }
np-profile = { path = "np-profile" }
parse-size = "1.1.0"
pem = "3.0"
pkcs8 = "0.10"
pocket-ic = "6"
pretty_env_logger = "0.5"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0.138", features = ["preserve_order"] }
serde_yaml_ng = "0.10"
sha2 = "0.10"
strsim = "0.11"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
tabular = "0.2"
tempfile = "3.17"
tiny-bip39 = "2.0"
tokio = { version = "1.43", features = ["full"] }
which = "7.0"
