[workspace]
resolver = "2"
members = [
    "cli",
    "common",
    "ic-canister",
    "ledger-map",
    "provider-json-search",
    "provider-offering",
    "provider-profile",
    "wasm",
]

[workspace.package]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
ahash = { version = "0.8", default-features = false }
anyhow = "1.0"
base32 = "0.5"
base64 = "0.22"
borsh = { version = "1.5.7", features = ["derive"] }
ciborium = "0.2"
candid = "0.10"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.5"
data-encoding = "2.9"
derp = "0.0.15"
dcc-common = { path = "common" }
dialoguer = "0.12"
dirs = "6.0"
ed25519-dalek = { version = "2", default-features = false, features = [
    "alloc",
    "digest",
    "pkcs8",
    "pem",
] }
env_logger = "0.11"
flate2 = "1.1"
filetime = "0.2"
fs-err = "3.1.3"
function_name = "0.3"
hex = "0.4"
hmac = "0.12"
ic-agent = "0.44.3"
ic-canister-log = "0.2"
ic-cdk = "0.18"
ic-certification = "3.0.3"
ic-metrics-encoder = "1.1"
ic-cdk-timers = "0.12"
icrc-ledger-types = "0.1"
indexmap = "2.12"
log = "0.4"
memmap2 = "0.9"
num-traits = "0.2"
num-bigint = { version = "0.4", default-features = false, features = ["serde"] }
provider-offering = { path = "provider-offering" }
provider-profile = { path = "provider-profile" }
parse-size = "1.1.0"
pem = "3.0"
pkcs8 = "0.10"
pocket-ic = "10"
pretty_env_logger = "0.5"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_yaml_ng = "0.10"
csv = "1.4"
sha2 = "0.10"
strsim = "0.11"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tabular = "0.2"
tempfile = "3.23"
tiny-bip39 = "2.0"
tokio = { version = "1.48", features = ["full"] }
which = "8.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
