[workspace]
resolver = "2"
members = ["api", "api/email-utils", "cli", "common", "dc-agent", "ic-canister", "ledger-map"]

[workspace.package]
version = "0.4.5"
edition = "2021"

[workspace.dependencies]
ahash = { version = "0.8", default-features = false }
anyhow = "1.0"
async-trait = "0.1"
base32 = "0.5"
base64 = "0.22"
borsh = { version = "1.5.7", features = ["derive"] }
candid = "0.10"
chrono = "0.4"
ciborium = "0.2"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.5"
csv = "1.4"
data-encoding = "2.9"
dcc-common = { path = "common" }
derp = "0.0.15"
dialoguer = "0.12"
dirs = "6.0"
dotenv = "0.15"
ed25519-dalek = { version = "2", default-features = false, features = [
    "alloc",
    "digest",
    "pkcs8",
    "pem",
] }
env_logger = "0.11"
filetime = "0.2"
flate2 = "1.1"
fs-err = "3.1.3"
function_name = "0.3"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
ic-agent = "0.44.3"
ic-canister-log = "0.2"
ic-cdk = "0.18"
ic-cdk-timers = "0.12"
ic-certification = "3.0.3"
ic-metrics-encoder = "1.1"
icrc-ledger-types = "0.1"
indexmap = "2.12"
log = "0.4"
memmap2 = "0.9"
num-bigint = { version = "0.4", default-features = false, features = ["serde"] }
num-traits = "0.2"
parse-size = "1.1.0"
pem = "3.0"
pkcs8 = "0.10"
pocket-ic = "10"
poem = "3.0"
pretty_env_logger = "0.5"
regex = "1.12.2"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_yaml_ng = "0.10"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
strsim = "0.11"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tabular = "0.2"
tempfile = "3.23"
tiny-bip39 = "2.0"
tokio = { version = "1.48", features = ["full"] }
ts-rs = "11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
which = "8.0"

# Pin num-bigint-dig to fix future-incompat warning in v0.8.5
# See: https://github.com/rust-lang/rust/issues/120192
num-bigint-dig = "0.8.6"
