[project]
name = "decent-cloud"
version = "0.1.0"
description = ""
authors = [{ name = "Yan Liu", email = "yanliu8@proton.me" }]
license = "APACHE"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
pythonpath = [".", "simulator"]
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 130

[project.optional-dependencies]
test = [
    "pytest",
    "mock",
]
dev = [
    "pytest",
    "mock",
    "black",
    "ruff",
    "pre-commit",
    "tbump",
]
