[package]
name = "api"
version.workspace = true
edition = "2021"

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
borsh.workspace = true
candid.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
dcc-common = { path = "../common" }
dotenv.workspace = true
hex.workspace = true
ic-agent.workspace = true
icrc-ledger-types.workspace = true
ledger-map = { path = "../ledger-map" }
num-bigint.workspace = true
poem.workspace = true
poem-openapi = { version = "5", features = ["swagger-ui", "chrono"] }
provider-offering = { path = "../provider-offering" }
provider-profile = { path = "../provider-profile" }
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
ts-rs.workspace = true
