[package]
name = "api"
version.workspace = true
edition = "2021"

[[bin]]
name = "api-server"
path = "src/main.rs"

[[bin]]
name = "test-email"
path = "src/bin/test-email.rs"

[[bin]]
name = "api-cli"
path = "src/bin/api-cli.rs"

[dependencies]
anyhow.workspace = true
async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper"] }
async-trait.workspace = true
base64.workspace = true
borsh.workspace = true
candid.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
dcc-common = { path = "../common" }
dotenv.workspace = true
email-utils = { path = "./email-utils" }
ed25519-dalek.workspace = true
futures.workspace = true
hex.workspace = true
hmac = "0.12"
ic-agent.workspace = true
icrc-ledger-types.workspace = true
lazy_static = "1.5"
ledger-map = { path = "../ledger-map" }
num-bigint.workspace = true
oauth2 = "4.4"
poem = { workspace = true, features = ["cookie"] }
poem-openapi = { version = "5", features = ["swagger-ui", "chrono"] }
rand = "0.8"
time = { version = "0.3", features = ["serde", "macros"] }
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
ts-rs.workspace = true
uuid.workspace = true

[dev-dependencies]
mockito = "1.7"
