[package]
name = "dcc-common"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash.workspace = true
anyhow.workspace = true
base32.workspace = true
base64.workspace = true
borsh.workspace = true
candid.workspace = true
crc32fast.workspace = true
data-encoding.workspace = true
derp.workspace = true
dirs.workspace = true
ed25519-dalek.workspace = true
function_name.workspace = true
hex.workspace = true
hmac.workspace = true
icrc-ledger-types.workspace = true
ledger-map.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
np-offering.workspace = true
np-profile.workspace = true
pem.workspace = true
pkcs8.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
strum_macros.workspace = true
strum.workspace = true

[dev-dependencies]
env_logger.workspace = true
tempfile.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
ic-cdk.workspace = true
web-sys = { version = "0.3.77", features = [
    "Storage",
    "Window",
    "console",
], optional = true }

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
fs-err.workspace = true

[features]
ic = []
browser = ["web-sys"]
