[package]
name = "dc-agent"
version.workspace = true
edition = "2021"
default-run = "dc-agent"

[[bin]]
name = "dc-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml = "0.8"
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.8"
