[package]
name = "dc-agent"
version.workspace = true
edition = "2021"
default-run = "dc-agent"

[[bin]]
name = "dc-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-ssh2-tokio = "0.12.1"
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dcc-common.workspace = true
dirs = "5.0"
ed25519-dalek.workspace = true
hex.workspace = true
public-ip-address = "0.3"
rand = "0.8"
reqwest.workspace = true
rpassword = "7.4.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml = "0.8"
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4"] }
# Pin to fix future-incompat warning (transitive from russh)
num-bigint-dig.workspace = true

[dev-dependencies]
mockito = "1.6"
tempfile = "3.8"
