[package]
name = "decent_cloud_canister"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash.workspace = true
anyhow.workspace = true
base32.workspace = true
base64.workspace = true
borsh.workspace = true
candid.workspace = true
ciborium.workspace = true
crc32fast.workspace = true
dcc-common.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
ic-canister-log.workspace = true
ic-cdk-timers.workspace = true
ic-cdk.workspace = true
ic-certification.workspace = true
ic-metrics-encoder.workspace = true
icrc-ledger-types.workspace = true
ledger-map.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
pocket-ic.workspace = true
once_cell = "1.20.1"

[build-dependencies]
which.workspace = true
