[package]
name = "np-offering"
version.workspace = true
edition.workspace = true

[dependencies]
borsh.workspace = true
candid.workspace = true
csv.workspace = true
ed25519-dalek = { workspace = true, features = ["pem"] }
fs-err.workspace = true
hex.workspace = true
indexmap.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
serde.workspace = true
strsim.workspace = true

[dev-dependencies]
rand = "0.9.2"
tempfile.workspace = true
