[package]
name = "decent-cloud-wasm"
version = "0.3.0"
authors = ["Decent Cloud Team"]
edition = "2021"
description = "WebAssembly module for interacting with Decent Cloud ledger"
license = "Apache-2.0"
repository = "https://github.com/decent-stuff/decent-cloud"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[lib]
name = "decent_cloud_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = { workspace = true }
candid = { workspace = true }
console_error_panic_hook = "0.1.7"
dcc-common = { path = "../common", features = ["browser"] }
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
] }
hex = { workspace = true }
js-sys = "0.3.82"
ledger-map = { path = "../ledger-map", features = ["browser"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
wasm-bindgen = { version = "0.2.105", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = ["Storage", "Window", "console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
